  - Added RFC9180 HPKE and associated KEMs
  - Replace oneshot PKE and KEM APIs with HPKE
  - New Elligator KEM
  - Namestore API allows multiple records to be inserted in a single transaction (if plugin supports this)
  - New ECDH API that uses KDFs instead of hash
  - Renamed GNUNET_CRYPTO_hkdf to GNUNET_CRYPTO_hkdf_gnunet
  - Added new standard SHA256-based HKDF APIs

v0.21.2:
  - Reworked TESTING API
  - Disabled many old-style tests
  - TESTING: introduce GNUNET_TESTING_command_new_ac
  - UTIL: change return type to 'bool' from GNUNET_is_zero()
  - Added GNUNET_GNS_parse_ztld helper API

v0.21.1:
  - Communicator and connectivity bugfixes

v0.21.0:
  - Reworked PEERSTORE API
  - Added record flag for maintenance records
  - ensure traits can be generated with subsystem-specific prefixes for the symbols
  - libgnunettesting first major testing NG refactor towards getting dependency structure streamlined
  - Remove single-use API macro GNUNET_VA_ARG_ENUM
  - major revision of blind signature API
  - Introduced closure to hold store context when calling function to add hello in peerstore.
  - Added DDLs for handling GNUNET_PEERSTORE_StoreHelloContext
  - Removed old hello functionality.
  - Refactoring components under src/ into lib/, plugin/, cli/ and service/
  - add support for encoding/decoding double values as part of JSON to libgnunetjson
  - Changed method GNUNET_HELLO_builder_get_expiration_time to not need parameter GNUNET_HELLO_Builder.
  - Code moved to the core package to get rid of circular dependencies.
  - Moved code to testing to have more generic test setup, which can be used not only from within transport.
  - The old hello design replaced by the new  hello design.
  - Added api to get notified when hellos are stored with peerstore service.
  - Added api to store hellos with peerstore service.
  - Changed new hello uri api to allow to change the expiration time
  - Moved start peer command to testing subsystem.