@@ -20,7 +20,7 @@ HOSTLISTFILE = $GNUNET_CONFIG_HOME/hostlist/learned.txt
 OPTIONS = -b
 
 # Default list of hostlist servers for bootstrapping
-SERVERS = https://bootstrap.gnunet.org/v21
+SERVERS = https://bootstrap.gnunet.org/v22
 # A node running git head or close to it (possibly release-incompatible)
 # SERVERS = https://bootstrap.gnunet.org/latest
 # http://silent.0xdeadc0de.eu:8080/
